# MARS-Multi-Agent-Research-System

./: .dockerignore  .env.example  .env.production.example  .gitignore  .importlinter  ACCEPTANCE.md  ACCEPTANCE_V1.md  ACCEPTANCE_V2.md  AGENTS.md  CLAUDE.md  DESIGN 2.md  DESIGN.md  LICENSE  PRODUCT 2.md  PRODUCT.md  README.md  README.zh-CN.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
backend/: Dockerfile  Dockerfile.prod
codespec/: service_context.md
configs/: agents.yaml  context.yaml  evaluation.yaml  execution.yaml  frontend.yaml  gates.yaml  knowledge.yaml  memory.yaml  models.yaml  observability.yaml  reporting.yaml  tools.yaml  workflow.yaml
docs/: V1_AGENT_TODO.md  V1_RELEASE_STATUS.md  V2_AGENT_TODO.md  V2_RELEASE_STATUS.md  agent_context_blueprints.md  agent_io_schema.md  architecture 2.md  architecture.md  deployment_runbook.md  evaluation_system.md  frontend_ux.md  implementation_report.md  memory_management_summary.html  memory_management_summary_副本.html  memory_system.md  minimal_agent_loop.md  observability_design.md  phase_0_status.md  phase_1_status.md  phase_2_status.md  phase_3_status.md  phase_4_status.md  phase_5_status.md  phase_6_status.md  phase_7_status.md  run_lifecycle.md  tool_security.md  tools_catalog.md
frontend/: .dockerignore  .gitignore  Dockerfile.prod  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
knowledge/: README.md
posttrain/: README.md
scripts/: acceptance.sh  audit_idea_agent_run.py  cli_validate.py  dev.sh  (+14 more)
(+407 files in other folders)
